--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
                 <div class="container">
                     <h2 class="section-title">What are we doing</h2>
                     <ul class="list wedoing-list">
-                        <li> <img src="./images/PS.jpg" alt="Monitor" width="360"></li>
-                        <li> <img src="./images/Menu_phone.jpg" alt="Menu phone" width="360"></li>
-                        <li> <img src="./images/Phone.jpg" alt="hone" width="360"></li>
+                        <li> <img srcset="./images/media/service-first.webp 1x, ./images/media/service-first@2x.webp 2x" src="./images/media/" alt="Monitor" width="360"/></li>
+                        <li> <img srcset="./images/media/service-second.webp 1x, ./images/media/service-second@2x.webp 2x" src="./images/Menu_phone.jpg" alt="Menu phone" width="360"></li>
+                        <li> <img srcset="./images/media/service-third.webp 1x, ./images/media/service-third@2x.webp 2x" src="./images/Phone.jpg" alt="hone" width="360"></li>
                     </ul>
                 </div>   
             </section>
@@ -154,7 +154,7 @@
                 <h2 class="section-title">Our Team</h2>
                 <ul class="list  our-team-list">
                     <li class="team-icon">
-                            <img src="./images/Mark.jpg" alt="Photo Mark" width="264" class="team-img">
+                            <img src="./images/Mark.jpg"  srcset="./images/media/mark-guerrero.webp 1x, ./images/media/mark-guerrero@2x.webp 2x" alt="Photo Mark" width="264" class="team-img">
                         <div class="team-text">
                             <h3 class="section-subh">Mark guerrero</h3>
                             <p>Product Designer</p>
@@ -195,7 +195,7 @@
                     </li>
 
                     <li class="team-icon">
-                            <img src="./images/Tom.jpg" alt="Photo Tom" width="264" class="team-img">
+                            <img src="./images/Tom.jpg" srcset="./images/media/tom-ford.webp 1x, ./images/media/tom-ford@2x.webp 2x" alt="Photo Tom" width="264" class="team-img">
                         <div class="team-text">
                             <h3 class="section-subh">Tom Ford</h3>
                             <p>Frontend Developer</p> 
@@ -235,7 +235,7 @@
                     </li>
 
                     <li class="team-icon">
-                            <img src="./images/Camila.jpg" alt="Photo Camila" width="264" class="team-img">
+                            <img src="./images/Camila.jpg"  srcset="./images/media/camila-garcia.webp 1x, ./images/media/daniel-wilson@2x.webp 2x" alt="Photo Camila" width="264" class="team-img">
                         <div class="team-text">
                             <h3 class="section-subh">Camila Garcia</h3>
                             <p>Marketing</p>
@@ -274,7 +274,7 @@
                     </li>
 
                     <li class="team-icon">                       
-                            <img src="./images/Daniel.jpg" alt="Photo Daniel" width="264" class="team-img">
+                            <img src="./images/Daniel.jpg" srcset="./images/media/daniel-wilson.webp 1x, ./images/media/daniel-wilson@2x.webp 2x" alt="Photo Daniel" width="264" class="team-img">
                         <div class="team-text">
                             <h3 class="section-subh">Daniel Wilson</h3>
                             <p>UI Designer</p>
