--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
             <button type="button" class="mobile-menu-open" data-menu-open>
                <svg class="mobile_menu-open__icon"  width="32" height="22">
-                <use href="./images/icons.svg#icon-menu3"></use>
+                <use href="./images/icons.svg#hamburger"></use>
                </svg>
             </button>
  
