--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     </header>
     
     <main>           
-        <section class="portfolio container ">   
+        <section class="portfolio ">   
             <div class="container">    
                 <h1 class="visually-hidden ">Portfolio webstudio</h1>              
 
