--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </button>
 
                 <ul class="site-nav-mobile list ">
-                    <li class="item-mobile"> <a  href="./index.html" class="nav-link-mobile ">Studio</a></li>
+                    <li class="item-mobile"> <a  href="./index.html" class="nav-link-mobile current ">Studio</a></li>
                     <li class="item-mobile"> <a  href="./portfolio.html" class="nav-link-mobile">Portfolio</a></li>
-                    <li class="item-mobile"> <a  href="" class="nav-link-mobile current">Contacts</a></li>
+                    <li class="item-mobile"> <a  href="" class="nav-link-mobile ">Contacts</a></li>
                 </ul>   
 
                 <ul class="contact-date-mobile list">
