--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                      <textarea name="user_message"   class="modal-form-message" placeholder="Text input"></textarea>
                 </label>
                 <input id="user-policy" type="checkbox" name="user_policy" class="modal-form-check visually-hidden" required>
-                <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp;<a href="">Privacy Policy</a> 
+                <label for="user-policy" class="modal-form-check-desc">I accept the terms and conditions of the&nbsp;<a class="modal-form-policy" href="">Privacy Policy</a> 
                 </label>
                 <button type="submit" class="modal-form-submit">Send</button>
                               
